--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,22 +1,25 @@
 ---
+import { TiSocialInstagram, TiSocialYoutube } from "react-icons/ti"
+import { SiVsco, SiTiktok } from "react-icons/si"
+
 export interface Props {
 	title: string;
-	body: string;
 	href: string;
+	icon: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, icon } = Astro.props;
 ---
 
 <li class="link-card">
-	<a href={href}>
+	<a href={href} target="_blank">
 		<h2>
-			{title}
-			<span>&rarr;</span>
+			{icon === 'instagram' && <TiSocialInstagram />}
+			{icon === 'youtube' && <TiSocialYoutube />}
+			{icon === 'vsco' && <SiVsco />}
+			{icon === 'tiktok' && <SiTiktok />}
+			<span>{title}</span>
 		</h2>
-		<p>
-			{body}
-		</p>
 	</a>
 </li>
 <style>
@@ -43,11 +46,27 @@ const { href, title, body } = Astro.props;
 		background-color: white;
 		opacity: 0.8;
 	}
+
 	h2 {
 		margin: 0;
-		font-size: 1.25rem;
+		font-size: 20px;
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+		display: flex;
+		flex-flow: row;
+		align-items: center;
+		align-content: center;
 	}
+
+	h2 > span {
+		display: block;
+		margin-left: 6px;
+	}
+
+	h2 > svg {
+		display: block;
+		transform: scale(2);
+	}
+
 	p {
 		margin-top: 0.5rem;
 		margin-bottom: 0;
