--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,12 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="title" content="Shaira Rae">
+		<meta name="description" content="Social Media Link Archive">
+		<meta name="keywords" content="tiktok, instagram, shaishaishaiii, vsco, youtube, ph, philippines, tiktok shop, online selling">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="English">
 		<title>{title}</title>
 	</head>
 	<body>
@@ -22,7 +28,7 @@ const { title } = Astro.props;
 <style is:global>
 	:root {
 		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #378ddd 30%, white 60%);
 	}
 	html {
 		font-family: system-ui, sans-serif;
