--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,35 +3,37 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="@shaishaishaiii">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+		<h1><span class="text-gradient">@shaishaishaiii</span></h1>
+		<p class="intro">
+			✨ click the following links and check out my content!
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				href="https://www.instagram.com/shaishaishaiii/"
+				title="Instagram"
+				icon="instagram"
 			/>
 			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
+				href="https://www.youtube.com/@shairarae"
+				title="YouTube"
+				icon="youtube"
 			/>
 			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
+				href="https://vsco.co/shairarae/gallery"
+				title="VSCO"
+				icon="vsco"
 			/>
 			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				href="https://www.tiktok.com/@shaishaishaiii"
+				title="TikTok"
+				icon="tiktok"
 			/>
 		</ul>
+		<footer>
+			&copy; 2023 <a href="https://baeq.dev" target="_blank">bryanaldrin</a>
+		</footer>
 	</main>
 </Layout>
 
@@ -53,7 +55,7 @@ import Card from '../components/Card.astro';
 		background-size: 400%;
 		background-position: 0%;
 	}
-	.instructions {
+	.intro {
 		line-height: 1.6;
 		margin: 1rem 0;
 		border: 1px solid rgba(var(--accent), 25%);
@@ -61,7 +63,7 @@ import Card from '../components/Card.astro';
 		padding: 1rem;
 		border-radius: 0.4rem;
 	}
-	.instructions code {
+	.intro code {
 		font-size: 0.875em;
 		font-weight: bold;
 		background: rgba(var(--accent), 12%);
@@ -69,7 +71,7 @@ import Card from '../components/Card.astro';
 		border-radius: 4px;
 		padding: 0.3em 0.45em;
 	}
-	.instructions strong {
+	.intro strong {
 		color: rgb(var(--accent));
 	}
 	.link-card-grid {
@@ -77,5 +79,10 @@ import Card from '../components/Card.astro';
 		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
 		gap: 1rem;
 		padding: 0;
+	}
+	footer {
+		margin-top: 36px;
+		text-align: center;
+		font-size: 10px;
 	}
 </style>
