--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { Analytics } from '@vercel/analytics/react';
 export interface Props {
 	title: string;
 }
@@ -23,6 +24,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<slot />
+		<Analytics />
 	</body>
 </html>
 <style is:global>
